# Retail-supply-intel

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/scripts/: session-setup.sh
.github/workflows/: refresh.yml
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEPLOYMENT.md  PRODUCTSCOPE_FEATURES.md  SCOUTING_PLATFORM_WORKFLOW.md  SUPPLYSCOPE_COMPARISON.md
pipelines/: README.md  pyproject.toml
pipelines/src/rsi/: __init__.py  cli.py  config.py  db.py  models.py  reference.py  repository.py  snapshot.py
pipelines/src/rsi/connectors/: __init__.py  aliexpress.py  amazon.py  apify_base.py  base.py  comtrade.py  google_trends.py  instagram.py  pinterest.py  tiktok.py  wikipedia.py
pipelines/src/rsi/correlation/: __init__.py  engine.py
pipelines/src/rsi/insights/: __init__.py  engine.py  llm.py
pipelines/src/rsi/trends/: __init__.py  scoring.py
pipelines/tests/: conftest.py  test_aliexpress.py  test_apify_parsers.py  test_correlation.py  test_insights.py  test_scoring.py  test_snapshot.py  test_tiktok.py
supabase/migrations/: 0001_initial_schema.sql  0002_add_trend_score_acceleration.sql  0003_add_insights.sql  0004_add_snapshots.sql  0005_add_source_status.sql  0006_product_ideas.sql  0007_product_idea_comments.sql  0008_product_idea_source_url.sql
web/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
web/app/: app.css  globals.css  layout.tsx  page.tsx  tokens.css
web/components/: Dashboard.tsx  Nav.tsx  SimilarIdeas.tsx  SourceBars.tsx  SubmitIdeaPage.tsx  (+11 more)
(+64 files in other folders)
