[project]
name = "rsi-pipelines"
version = "0.1.0"
description = "Retail Supply Intel — ingestion, scoring and correlation pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "httpx>=0.27",
    "pytrends>=4.9",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
rsi = "rsi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rsi"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Typer's API intentionally uses Option()/Argument() as parameter defaults.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
